--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "google-sheets": "^0.0.7",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1"
