--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "google-sheets": "^0.0.7",
     "next": "9.5.3",
     "react": "16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "16.13.1"
   },
   "prettier": {
