--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
     "emotion-theming": "^10.0.27",
-    "google-sheets": "^0.0.7",
+    "google-spreadsheet": "^3.0.13",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-beautiful-dnd": "^13.0.0",
