--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-on-netlify",
     "start": "next start"
   },
   "dependencies": {
@@ -14,6 +15,7 @@
     "emotion-theming": "^10.0.27",
     "google-spreadsheet": "^3.0.13",
     "next": "9.5.3",
+    "next-on-netlify": "^2.4.0",
     "react": "16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "16.13.1"
